# pyproject-version

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
py_version/: __init__.py  cli.py  tools.py
pyproject_version/: __init__.py  cli.py  tools.py
tests/: conftest.py  test_cli.py  test_tools.py
tests/one_package_root/: pyproject.toml
tests/project_section/: pyproject.toml
tests/project_section/package_a/: __init__.py
tests/two_package_root/: pyproject.toml
tests/two_package_root/package_b/: __init__.py
