[tool.poetry]
name = "one-package-root"
version = "0.1.0"
description = "Utilities for maintaining the version in python projects."
authors = ["Cory Laughlin <laughlin.cory@gmail.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "package_a"
from = "."

[tool.py-version]
files = ["package_a/__init__.py"]
